--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,10 @@ git+https://github.com/MrYassinox/utils-standard.git@v1.1.2
 ########################################################################################################################
 # => NOTE dependencies for build docs:
 ########################################################################################################################
+# pdocs>=1.2.0
+# Pygments>=2.15.1
+# lazydocs>=0.4.8
+# pydocstyle>=6.3.0
 
 ########################################################################################################################
 # => NOTE dependencies whl:
